--- a/src/components/main/MainContent.module.css
+++ b/src/components/main/MainContent.module.css
@@ -1,5 +1,5 @@
 .container {
+  display: flex;
   margin: 0 !important;
-  background-color: #f1f1f1;
-  height: 400px;
+  background-color: #f8f8f8;
 }/*# sourceMappingURL=MainContent.module.css.map */
