--- a/src/components/Hero Section/Hero.module.css
+++ b/src/components/Hero Section/Hero.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 0px;
+  margin: 0;
   display: flex;
   justify-content: right;
   background-color: #d04a02;
@@ -7,12 +7,14 @@
 }
 .container img {
   width: 40%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .title {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 7%;
   justify-content: center;
   align-content: center;
 }
