--- a/src/components/Hero Section/Hero.module.scss
+++ b/src/components/Hero Section/Hero.module.scss
@@ -1,18 +1,19 @@
 .container{
-    margin:0px;
+    margin:0;
     display: flex;
     justify-content: right;
     background-color: #d04a02;
     gap:17%;
     img{
         width:40%;
+        object-fit: cover;
     }
 }
 
 .title{
     display: flex;
     flex-direction: column;
-    gap:10px;
+    gap:7%;
     justify-content: center;
     align-content: center;
     h1,h3{
@@ -25,4 +26,6 @@
         font-size: 14px;
     }
 }
+
+
 
