--- a/src/components/main/MainContent.module.scss
+++ b/src/components/main/MainContent.module.scss
@@ -4,3 +4,11 @@
     margin: 0!important;
     background-color: #f8f8f8;
 }
+
+@media screen and (max-width:1100px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        background-color: #f8f8f8;
+    }
+}
