--- a/src/components/Hero Section/Hero.module.css
+++ b/src/components/Hero Section/Hero.module.css
@@ -1,29 +1,61 @@
-.container {
-  margin: 0;
-  display: flex;
-  justify-content: right;
-  background-color: #d04a02;
-  gap: 17%;
+@media screen and (min-width: 1100px) {
+  .container {
+    margin: 0;
+    display: flex;
+    justify-content: right;
+    background-color: #d04a02;
+    gap: 17%;
+  }
+  .container img {
+    width: 40%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .title {
+    display: flex;
+    flex-direction: column;
+    gap: 10px !important;
+    justify-content: center;
+    align-content: center;
+  }
+  .title h1, .title h3 {
+    color: white;
+  }
+  .title h1 {
+    font-size: 24px;
+  }
+  .title h3 {
+    font-size: 14px;
+  }
 }
-.container img {
-  width: 40%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.title {
-  display: flex;
-  flex-direction: column;
-  gap: 7%;
-  justify-content: center;
-  align-content: center;
-}
-.title h1, .title h3 {
-  color: white;
-}
-.title h1 {
-  font-size: 24px;
-}
-.title h3 {
-  font-size: 14px;
+@media screen and (max-width: 1100px) {
+  .container {
+    margin: 0;
+    display: flex;
+    justify-content: right;
+    background-color: #d04a02;
+    gap: 15px !important;
+  }
+  .container img {
+    width: 20%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .title {
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    justify-content: center;
+    align-content: center;
+  }
+  .title h1, .title h3 {
+    color: white;
+  }
+  .title h1 {
+    font-size: 24px;
+  }
+  .title h3 {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=Hero.module.css.map */
