--- a/src/components/Hero Section/Hero.module.scss
+++ b/src/components/Hero Section/Hero.module.scss
@@ -1,31 +1,65 @@
-.container{
-    margin:0;
-    display: flex;
-    justify-content: right;
-    background-color: #d04a02;
-    gap:17%;
-    img{
-        width:40%;
-        object-fit: cover;
+@media screen and (min-width:1100px) {
+    .container{
+        margin:0;
+        display: flex;
+        justify-content: right;
+        background-color: #d04a02;
+        gap:17%;
+        img{
+            width:40%;
+            object-fit: cover;
+        }
+    }
+    
+    .title{
+        display: flex;
+        flex-direction: column;
+        gap: 10px!important;;
+        justify-content: center;
+        align-content: center;
+        h1,h3{
+            color:white;
+        }
+        h1{
+            font-size: 24px;
+        }
+        h3{
+            font-size: 14px;
+        }
     }
 }
 
-.title{
-    display: flex;
-    flex-direction: column;
-    gap:7%;
-    justify-content: center;
-    align-content: center;
-    h1,h3{
-        color:white;
+
+@media screen and (max-width:1100px) {
+    .container{
+        margin:0;
+        display: flex;
+        justify-content: right;
+        background-color: #d04a02;
+        gap: 15px!important;;
+        img{
+            width:20%;
+            object-fit: cover;
+        }
     }
-    h1{
-        font-size: 24px;
-    }
-    h3{
-        font-size: 14px;
+    
+    .title{
+        padding: 5%;
+        display: flex;
+        flex-direction: column;
+        gap:10%;
+        justify-content: center;
+        align-content: center;
+        h1,h3{
+            color:white;
+        }
+        h1{
+            font-size: 24px;
+        }
+        h3{
+            font-size: 14px;
+        }
     }
 }
-
 
 
