--- a/src/components/main/MainContent.module.css
+++ b/src/components/main/MainContent.module.css
@@ -3,4 +3,12 @@
   justify-content: space-between;
   margin: 0 !important;
   background-color: #f8f8f8;
+}
+
+@media screen and (max-width: 1100px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    background-color: #f8f8f8;
+  }
 }/*# sourceMappingURL=MainContent.module.css.map */
