--- a/src/assets/css/loging.css
+++ b/src/assets/css/loging.css
@@ -1,7 +1,7 @@
 .background {
-  background-image: url("../imgs/original.gif");
+  background-color: #ffb600;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-size: cover;
   padding-left: 5vw;
   padding-top: 0;
@@ -10,8 +10,6 @@
 p{
   font-family: 'Open Sans', sans-serif;
 }
-
-
 
 @media screen and (max-width: 400px) {
   .background {
