--- a/src/assets/css/loging.css
+++ b/src/assets/css/loging.css
@@ -1,8 +1,9 @@
 .background {
   background-image: url("../imgs/original.gif");
+  background-size: cover;
+  background-position: center;
   width: 100%;
   height: 100vh;
-  background-size: cover;
   padding-left: 5vw;
   padding-top: 0;
 }
@@ -14,21 +15,21 @@ p{
 
 @media screen and (max-width: 400px) {
   .background {
-    height: 136vh;
+    height: 100%;
   }
 }
 
-/* 
+
 
 @media screen and (min-width: 50px) and (max-width: 500px) {
   .background {
-    height: 121vh;
+    height: 100%;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .background {
-    height: 175vh;
+    height: 100vh;
   }
 }
 
@@ -36,4 +37,4 @@ p{
   .background {
     height: 100vh;
   }
-} */
+} 
