--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+/* body {
+  height: auto;
+} */
 body {
+  height: 100%;
   min-width: 300px;
-  /* height: auto; */
-  background-color: orangered;
+  margin: 0;
+  padding: 0;
 }
